# Iuri-Ware

./: README.md
client/src/: index.html
client/src/css/: index.css
client/src/html/: join.html  name.html  room.html
client/src/js/: commands.js  helper.js  join.js  name.js  protocol.js  room.js  router.js  websocket.js
client/src/js/common/: helper.js  protocol.js  router.js  websocket.js
docs/: Classes-Diagram.vpd  Mapeamento de Processos.xlsx  diagram_de_processo.cmmn  diagrama-bonus.bpmn
server/: Cargo.toml
server/.circleci/: config.yml
server/src/: commands.rs  error.rs  games.rs  lib.rs  main.rs  messages.rs  room.rs  server.rs  session.rs
server/src/games/: mod.rs  rock_papiuro_scissor.rs  the_right_iuro.rs
server/static/: websocket.html  websocket.js
src/: commands.rs  error.rs  lib.rs  main.rs  server.rs  session.rs
static/: websocket.html  websocket.js
