[package]
name = "iuro-server"
version = "0.1.0"
authors = ["Paulo Cabral Sanz <paulosanz@poli.ufrj.br>"]
edition = "2018"

[lib]
name = "iuro_server"
path = "src/lib.rs"

[[bin]]
name = "iuro-server-bin"
path = "src/main.rs"

[dependencies]
actix = "0.8"
actix-web = "1"
actix-web-actors = "1"
actix-files = "0.1"

thiserror = "1"

log = "0.4"
env_logger = "0.6"

rand = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
